charon/tests/ui/issue-378-ctor-as-fn.out
error: Casting constructors to function pointers is not supported
 --> /rustc/86d69c705a552236a622eee3fdea94bf13c5f102/library/core/src/option.rs:579:5

error: Ignoring the following item due to a previous error: core::option::Option::Some::{constructor#0}
 --> /rustc/86d69c705a552236a622eee3fdea94bf13c5f102/library/core/src/option.rs:579:5

error: The external definition `core::option::Option::Some` triggered errors. It is (transitively) used at the following location(s):
 --> tests/ui/issue-378-ctor-as-fn.rs:3:34
  |
3 | static F: fn(u8) -> Option<u8> = Some;
  |                                  ^^^^
...
6 |     let f: fn(u8) -> _ = Some;
  |                          ^^^^

error: aborting due to 3 previous errors

ERROR Compilation encountered 2 errors
